@startuml

title __VIEW's Class Diagram__\n

  namespace com.example {
    namespace view {
      class com.example.view.HorizontalListView {
          + mAlwaysOverrideTouch : boolean
          # mAdapter : ListAdapter
          # mCurrentX : int
          # mNextX : int
          # mScroller : Scroller
          ~ startX : float
          ~ startY : float
          - mDataChanged : boolean
          - mDataObserver : DataSetObserver
          - mDisplayOffset : int
          - mGesture : GestureDetector
          - mLeftViewIndex : int
          - mMaxX : int
          - mOnGesture : OnGestureListener
          - mOnItemClicked : OnItemClickListener
          - mOnItemLongClicked : OnItemLongClickListener
          - mOnItemSelected : OnItemSelectedListener
          - mRemovedViewQueue : Queue<View>
          - mRightViewIndex : int
          + HorizontalListView()
          + dispatchTouchEvent()
          + getAdapter()
          + getSelectedView()
          + onInterceptTouchEvent()
          + scrollTo()
          + setAdapter()
          + setOnItemClickListener()
          + setOnItemLongClickListener()
          + setOnItemSelectedListener()
          + setSelection()
          # onDown()
          # onFling()
          # onLayout()
          - addAndMeasureChild()
          - fillList()
          - fillListLeft()
          - fillListRight()
          - initView()
          - positionItems()
          - removeNonVisibleItems()
          - reset()
      }
    }
  }
  

  namespace com.example {
    namespace view {
      class com.example.view.MyListViewForScrollView {
          + MyListViewForScrollView()
          + MyListViewForScrollView()
          + MyListViewForScrollView()
          # onMeasure()
      }
    }
  }
  

  namespace com.example {
    namespace view {
      class com.example.view.MyScrollView {
          - inner : View
          - normal : Rect
          {static} - size : int
          - startmove : boolean
          - y : float
          + MyScrollView()
          + MyScrollView()
          + animation()
          + commOnTouchEvent()
          + isNeedAnimation()
          + isNeedMove()
          + onTouchEvent()
          # onFinishInflate()
      }
    }
  }
  

  com.example.view.HorizontalListView -up-|> android.widget.AdapterView
  com.example.view.MyListViewForScrollView -up-|> android.widget.ListView
  com.example.view.MyScrollView -up-|> android.widget.ScrollView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
